<resources>
    <string name="app_name">QuizzApp</string>
    <string name="ok_button">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_internet">Please make sure you\'re connected to internet.</string>
    <string name="question_goes_here">Question goes here…</string>
    <string name="first_answer_option">First answer option…</string>
    <string name="second_answer_option">Second answer option…</string>
    <string name="third_answer_option">Third answer option…</string>
    <string name="fourth_answer_option">Fourth answer option…</string>
    <string name="add_question">Add question</string>
    <string name="preference_file_key">com.irinamihaila.quizzapp.sharedprefs</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="generic_error">An error occured. Please try again.</string>
    <string name="register">Don\'t have an account? Register now.</string>
    <string name="register_btn">Register</string>
    <string name="player">Player</string>
    <string name="author">Author</string>
    <string name="full_name">Full Name</string>
    <string name="dashboardTitlePlayer">Let\'s Play</string>
    <string name="dashboardPlayerSubtitle">Choose a category to start playing</string>
    <string name="submit">Submit</string>
    <string name="quizFinished">Congrats! Here\'s how you did</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_take_quiz_once">Sorry. You can only take part in this quiz once.</string>
    <string name="dashboardTitleAuthor">What challenges will you bring today?</string>
    <string name="dashboardAuthorSubtitle">Let\'s get started</string>
    <string name="error_unable_to_find_any_quizzes">Unable to find any quizzes. Try creating one first.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_question">Update question</string>
    <string name="quiz_name">Quiz name</string>
    <string name="creation_date">Creation date</string>
    <string name="is_redo_available">Is redo available</string>
    <string name="update_quiz">Update quiz</string>
    <string name="delete_successful">Quiz deleted successfully.</string>
    <string name="error_valid_quiz_category">Must have a valid quiz category.</string>
    <string name="would_you_like_to_create_quiz">Would you like to create a quiz?</string>
    <string name="add_some_quizzes_to_get_the_fun_started">Add some quizzes to get the fun started.</string>
    <string name="unleash_your_creativity_add_some_questions_to_this_quiz">Unleash your creativity.\nAdd some questions to this quiz.</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send feedback</string>
    <string name="here_you_can_share_your_feedback_with_author_of_this_quiz">Here you can share your feedback with author of this quiz.</string>
    <string name="feedback_sent_success">Feedback sent successfully!</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="logout_message">Are you sure you want to log-out?</string>
    <string name="time_is_up_info">Time is up! Let\'s see how you did.</string>
    <string name="export_results_as_pdf">Export results as PDF</string>
</resources>