<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_dark1">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:background="@android:color/transparent"
        android:hint="@string/question_goes_here"
        android:imeOptions="actionNext"
        android:padding="@dimen/dimen_13dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@android:color/transparent"
        android:hint="@string/first_answer_option"
        android:imeOptions="actionNext"
        android:padding="@dimen/dimen_13dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewQuestion" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:background="@android:color/transparent"
        android:hint="@string/second_answer_option"
        android:imeOptions="actionNext"
        android:padding="@dimen/dimen_13dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:background="@android:color/transparent"
        android:hint="@string/third_answer_option"
        android:imeOptions="actionNext"
        android:padding="@dimen/dimen_13dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:background="@android:color/transparent"
        android:hint="@string/fourth_answer_option"
        android:imeOptions="actionDone"
        android:padding="@dimen/dimen_13dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer3" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etAnswer1">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:buttonTint="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:elevation="0dp"
        android:id="@+id/btnAddQuestion"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:text="@string/add_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer4"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>