<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNewQuestion"
        style="@style/CustomEditTextDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:hint="@string/question_goes_here"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer1"
        style="@style/CustomEditTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:hint="@string/first_answer_option"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewQuestion" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer2"
        style="@style/CustomEditTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/second_answer_option"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer3"
        style="@style/CustomEditTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/third_answer_option"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAnswer4"
        style="@style/CustomEditTextNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/fourth_answer_option"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toStartOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer3" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etAnswer1">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:backgroundTint="@color/black"
            android:buttonTint="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:buttonTint="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:buttonTint="@color/white" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>